--- a/Natours/starter/sass/base/_typography.scss
+++ b/Natours/starter/sass/base/_typography.scss
@@ -4,16 +4,14 @@ body {
   /*font-size: 16px;*/
   line-height: 1.7;
   color: $color-grey-dark;
-  padding: 3rem;
 
 }
-
-
 .heading-primary {
   color: $color-white;
   text-transform: uppercase;
   backface-visibility: hidden;
   margin-bottom: 6rem;
+
 
   &-main {
     display: block;
@@ -22,6 +20,11 @@ body {
     letter-spacing: 3.5rem;
     animation-name: moveInLeft;
     animation: moveInRight 3s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
 
   &-sub {
@@ -30,6 +33,10 @@ body {
     font-weight: 700;
     letter-spacing: 1.7rem;
     animation: moveInRight 3s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: .5rem;
+    }
   }
 }
 
@@ -43,6 +50,13 @@ body {
   color: transparent;
   letter-spacing: 2px;
   transition: all .2s;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
