--- a/Natours/starter/sass/layout/_footer.scss
+++ b/Natours/starter/sass/layout/_footer.scss
@@ -4,9 +4,17 @@
   font-size: 1.4rem;
   color: $color-grey-light-1;
 
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
+
   &-logo-box {
     text-align: center;
     margin-bottom: 8rem;
+
+    @include respond(tab-port) {
+      margin-bottom: 6rem ;
+    }
   }
   &-logo {
     width: 15rem;
@@ -16,6 +24,11 @@
     border-top: 1px solid $color-grey-dark;
     paddin-topg: 2rem;
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
   }
   &-list {
     list-style: none;
@@ -51,6 +64,11 @@
     padding-top: 2rem;
     width: 80%;
     float: right;
+
+    @include respond(tab-port) {
+      width: 100%;
+      float: none;
+    }
 
   }
 
