--- a/Trillo/starter/sass/_layout.scss
+++ b/Trillo/starter/sass/_layout.scss
@@ -8,9 +8,14 @@
 }
 
 .header {
+  font-size: 1.4rem;
   height: 7rem;
   background-color: white;
   border-bottom: var(--color-grey-light-2);
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
 }
 
@@ -24,11 +29,16 @@
 
   flex: 0 0 18%;
 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
 }
 
 .hotel-view {
   background-color: white;
   flex: 1;
+  height: 80rem;
 
 
 }
