--- a/Trillo/starter/css/style.css
+++ b/Trillo/starter/css/style.css
@@ -25,6 +25,9 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
+  @media only screen and (max-width: 68.75em) {
+    html {
+      font-size: 50%; } }
 
 body {
   font-family: "Open Sans", Arial;
@@ -45,6 +48,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center; }
+  @media only screen and (max-width: 31.25em) {
+    .search {
+      order: 1;
+      flex: 0 0 100%;
+      background-color: var(--color-grey-light-2); } }
   .search__input {
     font-family: inherit;
     font-size: inherit;
@@ -116,110 +124,151 @@ body {
   font-size: 1.4rem;
   list-style: none;
   margin-top: 3.5rem; }
+  @media only screen and (max-width: 56.25em) {
+    .side-nav {
+      display: flex;
+      margin: 0; } }
   .side-nav__item {
     position: relative; }
     .side-nav__item:not(:last-child) {
       margin-bottom: .5rem; }
-  .side-nav__item::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 3px;
-    background-color: var(--color-primary);
-    transform: scaleY(0);
-    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s;
-    background-color: .1s; }
-  .side-nav__item:hover::before, .side-nav__item--active::before {
-    transform: scaleY(1);
-    width: 100%; }
-  .side-nav__item--active::before {
-    background-color: var(--color-primary-light); }
-  .side-nav__link:link, .side-nav__link:visited {
-    color: var(--color-grey-light-1);
-    text-decoration: none;
-    text-transform: uppercase;
-    display: block;
-    padding: 1.5rem 3rem;
-    display: flex;
-    align-items: center;
-    position: relative;
-    z-index: 10; }
-  .side-nav__icon {
-    width: 1.75rem;
-    height: 1.75rem;
-    margin-right: 2rem;
-    fill: currentColor; }
-
-.legal {
-  font-size: 1.2rem;
-  text-align: center;
-  padding: 2.5rem;
-  color: var(--color-grey-light-4); }
-
-.gallery {
-  display: flex; }
-  .gallery__photo {
-    width: 100%;
-    display: block; }
-
-.overview {
-  display: flex;
-  align-items: center;
-  border-bottom: var(--line); }
-  .overview__heading {
-    font-size: 2.25rem;
-    font-weight: 300;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    padding: 1.5rem 3rem; }
-  .overview__stars {
-    margin-right: auto;
-    display: flex; }
-  .overview__icon-star, .overview__icon-location {
-    width: 1.75rem;
-    height: 1.75rem;
-    fill: var(--color-primary); }
-  .overview__location {
+      @media only screen and (max-width: 56.25em) {
+        .side-nav__item:not(:last-child) {
+          margin: 0; } }
+    @media only screen and (max-width: 56.25em) {
+      .side-nav__item {
+        flex: 1; } }
+    .side-nav__item__item::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 3px;
+      background-color: var(--color-primary);
+      transform: scaleY(0);
+      transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s; }
+    .side-nav__item__item:hover::before, .side-nav__item__item--active::before {
+      transform: scaleY(1);
+      width: 100%; }
+    .side-nav__item__item--active::before {
+      background-color: var(--color-primary-light); }
+    .side-nav__item__link:link, .side-nav__item__link:visited {
+      color: var(--color-grey-light-1);
+      text-decoration: none;
+      text-transform: uppercase;
+      display: block;
+      padding: 1.5rem 3rem;
+      display: flex;
+      align-items: center;
+      position: relative;
+      z-index: 10; }
+      @media only screen and (max-width: 56.25em) {
+        .side-nav__item__link:link, .side-nav__item__link:visited {
+          justify-content: center;
+          padding: 2rem; } }
+      @media only screen and (max-width: 37.5em) {
+        .side-nav__item__link:link, .side-nav__item__link:visited {
+          flex-direction: column;
+          padding: 1.5rem .5rem; } }
+    .side-nav__item__icon {
+      width: 1.75rem;
+      height: 1.75rem;
+      margin-right: 2rem;
+      fill: currentColor; }
+      @media only screen and (max-width: 37.5em) {
+        .side-nav__item__icon {
+          margin-right: 0;
+          width: 1.5rem;
+          height: 1.5rem;
+          margin-right: 0;
+          margin-bottom: 7px; } }
+  .side-nav .legal {
     font-size: 1.2rem;
-    display: flex;
-    align-items: center; }
-  .overview__icon-location {
-    margin-right: .5rem; }
-  .overview__rating {
-    background-color: var(--color-primary);
-    margin-left: 3rem;
-    color: white;
-    align-self: stretch;
-    padding: 0 2.25rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center; }
-  .overview__rating-average {
-    font-size: 2.25rem;
-    font-weight: 300;
-    margin-bottom: -3px; }
-  .overview__rating-count {
-    font-size: .8rem;
-    text-transform: uppercase; }
-
-.btn-inline {
-  border: none;
-  color: var(--color-primary);
-  font-size: inherit;
-  border-bottom: 1px solid currentColor;
-  padding-bottom: 2px;
-  display: inline-block;
-  background-color: transparent;
-  cursor: pointer;
-  transition: all .2s; }
-  .btn-inline:hover {
-    color: var(--color-grey-dark-1); }
-  .btn-inline:focus {
-    outline: none;
-    animation: pulsate 1s infinite; }
+    text-align: center;
+    padding: 2.5rem;
+    color: var(--color-grey-light-4); }
+    @media only screen and (max-width: 56.25em) {
+      .side-nav .legal {
+        display: none; } }
+    .side-nav .legal .gallery {
+      display: flex; }
+      .side-nav .legal .gallery__photo {
+        width: 100%;
+        display: block; }
+    .side-nav .legal .overview {
+      display: flex;
+      align-items: center;
+      border-bottom: var(--line); }
+      .side-nav .legal .overview__heading {
+        font-size: 2.25rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        padding: 1.5rem 3rem; }
+        @media only screen and (max-width: 37.5em) {
+          .side-nav .legal .overview__heading {
+            font-size: 1.8rem;
+            padding: 1.23rem 2rem; } }
+      .side-nav .legal .overview__stars {
+        margin-right: auto;
+        display: flex; }
+      .side-nav .legal .overview__icon-star, .side-nav .legal .overview__icon-location {
+        width: 1.75rem;
+        height: 1.75rem;
+        fill: var(--color-primary); }
+      .side-nav .legal .overview__location {
+        font-size: 1.2rem;
+        display: flex;
+        align-items: center; }
+      .side-nav .legal .overview__icon-location {
+        margin-right: .5rem; }
+      .side-nav .legal .overview__rating {
+        background-color: var(--color-primary);
+        margin-left: 3rem;
+        color: white;
+        align-self: stretch;
+        padding: 0 2.25rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center; }
+        @media only screen and (max-width: 37.5em) {
+          .side-nav .legal .overview__rating {
+            padding: 0 1.5rem; } }
+      .side-nav .legal .overview__rating-average {
+        font-size: 2.25rem;
+        font-weight: 300;
+        margin-bottom: -3px; }
+        @media only screen and (max-width: 37.5em) {
+          .side-nav .legal .overview__rating-average {
+            font-size: 1.8rem; } }
+      .side-nav .legal .overview__rating-count {
+        font-size: .8rem;
+        text-transform: uppercase; }
+        @media only screen and (max-width: 37.5em) {
+          .side-nav .legal .overview__rating-count {
+            font-size: 1.5rem; } }
+    .side-nav .legal .btn-inline {
+      border: none;
+      color: var(--color-primary);
+      font-size: inherit;
+      border-bottom: 1px solid currentColor;
+      padding-bottom: 2px;
+      align-self: center;
+      background-color: transparent;
+      cursor: pointer;
+      transition: margin-left .2s; }
+      .side-nav .legal .btn-inline span {
+        margin-left: 3px;
+        transition: margin-left .2s; }
+      .side-nav .legal .btn-inline:hover {
+        color: var(--color-grey-dark-1); }
+        .side-nav .legal .btn-inline:hover span {
+          margin-left: 8px; }
+      .side-nav .legal .btn-inline:focus {
+        outline: none;
+        animation: pulsate 1s infinite; }
 
 @keyframes pulsate {
   0% {
@@ -231,6 +280,137 @@ body {
   100% {
     transform: scale(1);
     box-shadow: none; } }
+    .side-nav .legal .paragraph:not(:last-of-type) {
+      margin-bottom: 2rem; }
+    .side-nav .legal .list {
+      list-style: none;
+      margin: 3rem 0;
+      padding: 3rem 0;
+      border-top: var(--line);
+      border-bottom: var(--line);
+      display: flex;
+      flex-wrap: wrap; }
+      .side-nav .legal .list__item {
+        flex: 0 0 50%;
+        margin-bottom: .7rem; }
+      .side-nav .legal .list__item:before {
+        content: "";
+        display: inline-block;
+        height: 1rem;
+        width: 1rem;
+        margin-right: .7rem;
+        background-color: var(--color-primary);
+        -webkit-mask-image: url("../img/chevron-thin-right.svg");
+        -webkit-mask-size: cover; }
+    .side-nav .legal .recommend {
+      font-size: 1.3rem;
+      color: var(--color-grey-dark-3);
+      display: flex;
+      align-items: center; }
+      .side-nav .legal .recommend__count {
+        margin-right: auto; }
+      .side-nav .legal .recommend__friends {
+        display: flex; }
+    .side-nav .legal__photo {
+      box-sizing: content-box;
+      height: 4rem;
+      width: 4rem;
+      border-radius: 50%;
+      border: 3px solid white; }
+      .side-nav .legal__photo:not(:last-child) {
+        margin-right: -2rem; }
+  .side-nav .review {
+    background-color: white;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    margin-bottom: 3.5rem;
+    position: relative;
+    overflow: hidden; }
+    @media only screen and (max-width: 56.25em) {
+      .side-nav .review {
+        padding: 2rem;
+        margin-bottom: 3rem; } }
+    .side-nav .review__text {
+      margin-bottom: 2rem;
+      position: relative;
+      z-index: 10; }
+    .side-nav .review__user {
+      display: flex;
+      align-items: center; }
+    .side-nav .review__photo {
+      height: 4.5rem;
+      width: 4.5rem;
+      border-radius: 50%;
+      margin-right: 1.5rem; }
+    .side-nav .review__user-box {
+      margin-right: auto; }
+    .side-nav .review__user-name {
+      font-size: 1.1rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      margin-bottom: .4rem; }
+    .side-nav .review__user-date {
+      font-size: 1rem;
+      color: var(--color-grey-dark-3); }
+    .side-nav .review__rating {
+      color: var(--color-primary);
+      font-size: 2.2rem;
+      font-weight: 300; }
+    .side-nav .review::before {
+      content: "\201C";
+      position: absolute;
+      top: -2.75rem;
+      left: -1rem;
+      line-height: 20rem;
+      font-size: 20rem;
+      color: var(--color-grey-light-2);
+      font-family: sans-serif;
+      z-index: 1; }
+  .side-nav .cta {
+    padding: 3.5rem 0;
+    text-align: center; }
+    @media only screen and (max-width: 56.25em) {
+      .side-nav .cta {
+        padding: 2rem 0; } }
+    .side-nav .cta__book-now {
+      text-transform: uppercase;
+      font-size: 2rem;
+      font-weight: 300;
+      margin-bottom: 2.5rem; }
+  .side-nav .btn {
+    font-size: 1.5rem;
+    border: none;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-radius: 100px;
+    background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+    color: white;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer; }
+    .side-nav .btn__visible {
+      display: inline-block;
+      padding: 2rem 7.5rem;
+      height: 100%;
+      width: 100%; }
+    .side-nav .btn__invisible {
+      display: inline-block;
+      position: absolute;
+      left: 0;
+      top: -100%;
+      padding: 2rem 0;
+      height: 100%;
+      width: 100%;
+      transition: all .2s; }
+    .side-nav .btn:hover {
+      background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark)); }
+    .side-nav .btn:hover .side-nav .btn__visible {
+      transform: translateY(100%); }
+    .side-nav .btn:hover .side-nav .btn__invisible {
+      top: 0; }
+    .side-nav .btn:focus {
+      outline: none;
+      animation: pulsate 1s infinite; }
 
 .container {
   max-width: 120rem;
@@ -238,6 +418,11 @@ body {
   background-color: var(--color-grey-light-2);
   box-shadow: var(--shadow-dark);
   min-height: 50rem; }
+  @media only screen and (max-width: 75em) {
+    .container {
+      margin: 0;
+      max-width: 100%;
+      width: 100%; } }
 
 .header {
   font-size: 1.4rem;
@@ -247,9 +432,17 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center; }
+  @media only screen and (max-width: 31.25em) {
+    .header {
+      flex-wrap: wrap;
+      height: 11rem;
+      align-content: space-around; } }
 
 .content {
   display: flex; }
+  @media only screen and (max-width: 56.25em) {
+    .content {
+      flex-direction: column; } }
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
@@ -262,19 +455,35 @@ body {
   flex: 1; }
 
 .detail {
+  font-size: 1.4rem;
   display: flex;
   padding: 4.5rem;
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line); }
+  @media only screen and (max-width: 56.25em) {
+    .detail {
+      padding: 3rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .detail {
+      flex-direction: column; } }
 
 .description {
-  font-size: 1.4rem;
   background-color: white;
   box-shadow: var(--shadow-light);
   padding: 3rem;
   flex: 0 0 60%;
   margin-right: 4.5rem; }
+  @media only screen and (max-width: 56.25em) {
+    .description {
+      padding: 2rem;
+      margin-right: 3rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .description {
+      margin-right: 0;
+      margin-bottom: 3rem; } }
 
 .user-reviews {
-  background-color: green;
-  flex: 1; }
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
